<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">VaffApp</string>
    <!-- ids and numbers -->
    <string name="flurry_id" translatable="false">CTMK9MZJN48KNVB3JH5V</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-6113915254397786/1328742956</string>

    <string name="welcome">Ciao, oggi è una giornata di merda e un vaffanculo gratis non te lo risparmi</string> <!-- first message -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_insult">InsultActivity</string>
    <string name="title_activity_insulto">Ti insulto!</string>
    <string name="insult">Vaffanculo, cazzo</string>
    <string name="insult_desc">Qualcosa è andato storto… chissenefrega, cazzi tuoi</string>
    <string name="insult_eng">…</string>
    <string name="button_insult_1">Prossimo</string>
    <string name="button_insult_2">Condividi</string>
    <string name="insultati_button">Insulto a caso</string>
    <string name="insultaci_button">Suggerisci un insulto</string>
    <string name="buy_insults">Più insulti</string>
    <string name="title_activity_send_insult">Manda un insulto o commento</string>
    <string name="fb_warning_message">L\'insulto è stato copiato nella clipboard, copialo nel post!</string>
    <string name="fb_warning_title">Condivisione su Facebook</string>
    <string name="ok">OK</string>
    <string name="other">Altro</string>
    <string name="choice1">Condividi su...</string>
    <string name="checkbox_text">Messaggio anonimo</string>
    <string name="language_menu">Change language (EN)</string>
    <string name="insulto">Insulto:</string>
    <string name="descrizione">Descrizione:</string>
    <string name="button_manda">Manda</string>
    <string name="commento">Commento/Richiesta</string>
    <string name="sicilia">Sicilia</string>
    <string name="sardegna">Sardegna</string>
    <string name="n_insulti">insulti caricati</string>
    <string name="n_block_insults">in più</string>
    <string name="msg_custom_dialog">Stai per sbloccare una nuova schermata della VaffApp dove puoi vedere tutti gli insulti in una volta (ed anche condividerli!)</string>
    <string name="buy">Compra</string>
    <string name="no_thanks">No grazie</string>
    <string name="watch_ad">Guarda ad</string>
    <string name="msg_unlock_insults2">\n\nOppure, se la Vaffapp ti è proprio piaciuta, puoi offrirmi un caffé comprando tutti gli insulti disponibili (inclusi quelli nuovi in futuri aggiornamenti):\n\n</string>
    <string name="msg_unlock_insults">Guarda un ad e sblocca&#160;</string>
    <!-- title e message when no apps for sharing are found -->
    <string name="noapp_warning_message">La VaffApp non ha trovato le app Facebook, Twitter, Whatsapp, Viber, o Hangout sul tuo dispositivo.\nSe vuoi condividere su altre app, scarica la VaffAppPro!</string>
    <string name="noapp_warning_title">App non trovate</string>
    <!-- message for VaffappPro - when exiting from mainactivity -->
    <string name="ad_title">Piaciuta la VaffApp?</string>
    <string name="ad_message">Scarica la VaffApp Pro!\nHa più insulti, nessuna pubblicità e condivisione su più app!</string>
    <string name="ad_ok_button">Guarda</string>
    <!-- reward related messages and warnings -->
    <string name="comeback_reward_title">Grazie per essere tornato!</string>
    <string name="unlocked">Sbloccati</string>
    <string name="insults">insulti</string>
    <string name="share_reward">Hai condiviso 3 insulti!</string>
    <string name="share_instructions_title">Istruzioni!</string>
    <string name="share_instructions_msg">Condividi un insulto 3 volte per sbloccare 10 nuovi insulti</string>
    <string name="ad_watched">Grazie per aver guardato l\'ad!</string>
    <string name="ad_na_title">Ad non disponibile</string>
    <string name="ad_na_msg">L\'ad non è stato ancora caricato, riprova tra qualche secondo</string>
    <!-- notification strings -->
    <string name="notif_title_1">Giornata storta?</string>
    <string name="notif_title_2">Insulta di più!</string>
    <string name="notif_title_3">Sfogati!</string>
    <!-- in app billing -->
    <string name="bought_insults_title">Sbloccati tutti gli insulti</string>
    <!-- master detail flow -->
    <string name="tutti_insulti_button">Tutti gli insulti</string>
    <string name="preferences_file">preferences_file</string>
    <string name="title_insult_list">Tutti gli Insulti</string>
    <string name="title_insult_detail">Insulto</string>

</resources>
