<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#01B6AD"
    tools:context="italo.vaffapp.app.MainActivity$PlaceholderFragment">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insultati_button"
        android:id="@+id/button"
        android:textSize="25sp"
        android:onClick="startInsultActivity"
        android:background="@drawable/button_background"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insultaci_button"
        android:id="@+id/button_insultaci"
        android:background="@drawable/button_background"
        android:onClick="startSendInsultActivity"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_tutti_insulti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutti_insulti_button"
        android:background="@drawable/button_background"
        android:onClick="startInsultDetailActivity"
        android:layout_below="@+id/button_insultaci"
        android:layout_marginTop="17dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_insults"
        android:id="@+id/button_buy_insults"
        android:background="@drawable/button_background"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="buyAllInsults"
        android:textSize="15sp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy_surf_insults"
        android:id="@+id/button_buy_surf_insults"
        android:layout_above="@+id/button_buy_insults"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:textSize="15sp"
        android:background="@drawable/button_background"
        android:onClick="buySurfInsults" />

</RelativeLayout>