<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="italo.vaffapp.app.SendInsultActivity"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scegli:"
        android:id="@+id/textview_choice" />

    <ScrollView
        android:id="@+id/scrollview_choices"
        android:layout_width="fill_parent"
        android:layout_height="200sp"
        android:fillViewport="true"
        android:layout_marginBottom="5sp">
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/radiogroupregions"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:id="@+id/radio_group_choice">
            <RadioButton android:id="@+id/radio1" android:text="@string/commento" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio2" android:text="Molise" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio3" android:text="Valle d'Aosta" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio4" android:text="Piemonte" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio5" android:text="Lombardia" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio6" android:text="Trentino Alto Adige" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio7" android:text="Friuli Venezia Giulia" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio8" android:text="Veneto" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio9" android:text="Emilia Romagna" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio10" android:text="Liguria" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio11" android:text="Toscana" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio12" android:text="Lazio" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio13" android:text="Umbria" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio14" android:text="Marche" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio15" android:text="Abruzzo" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio16" android:text="Campania" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio17" android:text="Puglia" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio18" android:text="Basilicata" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio19" android:text="Calabria" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio20" android:text="@string/sicilia" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <RadioButton android:id="@+id/radio21" android:text="@string/sardegna" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </RadioGroup>
    </ScrollView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.7"
        android:background="@drawable/box_around_layout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insulto"
                android:id="@+id/textview_insulto"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage|textMultiLine"
                android:id="@+id/edittext_insulto" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descrizione"
                android:id="@+id/textview_descrizione"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage|textMultiLine"
                android:id="@+id/edittext_descrizione" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_manda"
        android:layout_gravity="center_horizontal"
        android:onClick="sendFeedback"
        android:id="@+id/button_manda"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp"/>


</LinearLayout>
